3-argocd/argocd-repo-example/sample-projects/echoserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
  name: echoserver
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - echoserver.eks.kenbun.de
  rules:
  - host: echoserver.eks.kenbun.de
    http:
      paths:
      - path: /
        backend:
          service:
            name: echoserver
            port:
              number: 80
        pathType: Prefix
